# flashmd

./: README.md  example.py  pyproject.toml  tox.ini
.github/workflows/: tests.yml
docs/: energy.md  lammps.md  models.md
examples/al/: .gitignore  compare.ipynb  create-datasets.py  input.xml  options-flashmd-symplectic.yaml  options-flashmd.yaml
examples/al/simulation-baseline/: baseline.xml  run.sh
examples/al/simulation-flashmd/: run.py
examples/al/simulation-flashmd-omatpes/: run.py
examples/al/simulation-flashmd-symplectic/: run.py
src/flashmd/: __init__.py  constraints.py  fpi.py  ipi.py  ipi_symplectic.py  models.py  stepper.py  vv.py
src/flashmd/ase/: __init__.py  bussi.py  langevin.py  velocity_verlet.py
src/flashmd/steppers/: __init__.py  core.py  flashmd.py  symplectic.py
src/flashmd/utils/: energy_error.py
src/flashmd/wrappers/: __init__.py  npt.py  nve.py  nvt.py
src/skipmd/: __init__.py  ipi.py  stepper.py
src/skipmd/ase/: bussi.py  langevin.py  velocity_verlet.py
src/skipmd/utils/: energy_error.py
tests/: __init__.py  test_energy.py  test_fpi.py  test_models.py  test_readme.py
