[project]
name = "flashmd"
version = "0.2.5"
requires-python = ">=3.9"

readme = "README.md"
license = {text = "Apache-2.0"}
description = "Accelerated molecular dynamics with large-time-step predictions"
authors = [{name = "flashmd developers"}]

dependencies = [
    "metatrain==2025.12",
    "ase",
    "huggingface_hub",
]

keywords = ["machine learning", "molecular modeling", "molecular dynamics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

# TODO: add project URLs

[build-system]
requires = [
    "setuptools",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
ignore = ["B018", "B904", "E501"]

[tool.ruff.lint.per-file-ignores]
"**/{tests}/*" = ["D"]

[tool.ruff.lint.isort]
lines-after-imports = 2
known-first-party = ["flashmd"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
follow_imports = 'skip'
ignore_missing_imports = true

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:custom data:UserWarning",
]
